fix: update remaining SCSS files for light/dark mode theming
- Replace hardcoded colors with CSS custom properties in:
  - swiper-custom.scss, author.scss, related.scss, screen-reader-text.scss

- Remove generated files from repo tracking (static/css/style.css, static/js/bundle.js)
- Add .gitignore entries for build artifacts

--- a/src/scss/object/project/author.scss
+++ b/src/scss/object/project/author.scss
@@ -1,4 +1,5 @@
 @use "../../foundation/variable/breakpoint.scss" as breakpoint;
+@use '../../foundation/variable/_theme.scss' as theme;
 
 .p-author {
   display: block;
@@ -18,7 +19,7 @@
     margin: auto;
     text-align: center;
     font-size: 1.4rem;
-    color: #999;
+    color: var(--color-text-tertiary);
     @include breakpoint.mq-up(sm) {
       top: -50px;
     }
