--- a/src/scss/object/project/screen-reader-text.scss
+++ b/src/scss/object/project/screen-reader-text.scss
@@ -1,4 +1,4 @@
-@use '../../foundation/variable/color.scss' as color;
+@use '../../foundation/variable/_theme.scss' as theme;
 
 .p-screen-reader-text {
   clip: rect(1px, 1px, 1px, 1px);
@@ -9,11 +9,11 @@
   &:hover,
   &:active,
   &:focus {
-    background-color: #f1f1f1;
+    background-color: var(--color-screen-reader-bg);
     border-radius: 3px;
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
     clip: auto !important;
-    color: color.$color-accent;
+    color: var(--color-accent);
     display: block;
     font-size: 14px;
     font-size: 0.875rem;
